--- a/homework/github_hw1.ipynb
+++ b/homework/github_hw1.ipynb
@@ -1,71 +1,447 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "V3qVZg7KGA4m"
-   },
-   "source": [
-    "# Домашнее задание\n",
-    "Домашнее задание выполнять в этой тетрадке. \n",
-    "\n",
-    "- [ ] Сделать fork репозитория robofootball (https://github.com/Starkit-Education/robofootball/) - 1 балл\n",
-    "- [ ] Создать ветку update_readme - 1 балл\n",
-    "- [ ] Добавить одну строчку в README.md \n",
-    "- [ ] Запушить (git push) изменения в ветку update_readme - 3 балла\n",
-    "- [ ] Слить (merge) ветку update_readme в ветку develop - 1 балл\n",
-    "- [ ] Сохранить эту тетрадку с выполненной домашкой себе в репозиторий в ветку develop - 3 балла\n",
-    "- [ ] Слить (merge) ветку develop в ветку main - 1 балл"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/naoresh/robofootball/blob/develop/homework/github_hw1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V3qVZg7KGA4m"
+      },
+      "source": [
+        "# Домашнее задание\n",
+        "Домашнее задание выполнять в этой тетрадке. \n",
+        "\n",
+        "- [ ] Сделать fork репозитория cvr_cource (https://github.com/StarkitRobots/cvr_course) - 1 балл\n",
+        "- [ ] Создать ветку update_readme - 1 балл\n",
+        "- [ ] Добавить одну строчку в README.md \n",
+        "- [ ] Запушить (git push) изменения в ветку update_readme - 3 балла\n",
+        "- [ ] Слить (merge) ветку update_readme в ветку develop - 1 балл\n",
+        "- [ ] Сохранить эту тетрадку с выполненной домашкой себе в репозиторий в ветку develop - 3 балла\n",
+        "- [ ] Слить (merge) ветку develop в ветку main - 1 балл"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "XR_HY96dGA4q"
+      },
+      "source": [
+        "Материалы к семинару:\n",
+        "1. [Удачная модель ветвления](https://m.habr.com/ru/post/106912/)\n",
+        "2. [Зачем нужен Git](https://guides.hexlet.io/git-guide/)\n",
+        "3. [Самые популярные ошибки и их решения](https://tproger.ru/translations/most-common-git-screwupsquestions-and-solutions/)\n",
+        "4. [Ветвление](https://git-scm.com/book/ru/v2/%D0%92%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2-Git-%D0%9E-%D0%B2%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B8-%D0%B2-%D0%B4%D0%B2%D1%83%D1%85-%D1%81%D0%BB%D0%BE%D0%B2%D0%B0%D1%85)\n",
+        "5. [Инструкция по всему Git](https://git-scm.com/book/ru/v2)\n",
+        "6. [Приложение для обучения Git](https://learngitbranching.js.org/?locale=ru_RU)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "v_XJepSCGA4r",
+        "outputId": "417168f0-4afd-4a8f-e562-b669e722d8bd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'robofootball'...\n",
+            "remote: Enumerating objects: 36, done.\u001b[K\n",
+            "remote: Counting objects: 100% (19/19), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (12/12), done.\u001b[K\n",
+            "remote: Total 36 (delta 10), reused 13 (delta 7), pack-reused 17\u001b[K\n",
+            "Unpacking objects: 100% (36/36), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "!git clone https://github.com/naoresh/robofootball.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd robofootball"
+      ],
+      "metadata": {
+        "id": "2KaDzM_Yvo1C",
+        "outputId": "a49872e5-5a4f-4462-9860-3d1f9684f377",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "/content/robofootball\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout -b update_readme"
+      ],
+      "metadata": {
+        "id": "t8W19SUAvwSM",
+        "outputId": "ce21b50c-9f38-4220-ab35-758b24c6a71b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to a new branch 'update_readme'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!echo \"Добро пожаловать!\" >> README.md"
+      ],
+      "metadata": {
+        "id": "0NavVTokv20M"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!cat README.md"
+      ],
+      "metadata": {
+        "id": "3M3D8iA1wHVV",
+        "outputId": "46b710c8-fca9-4749-e1d6-e58c8a960554",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "# robofootball\n",
+            "Репозиторий для курсов повышения квалификации  \"Робофутбол\" от команды Starkit\n",
+            "Добро пожаловать!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git add README.md"
+      ],
+      "metadata": {
+        "id": "0I8SWWXjwJ8N"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git status"
+      ],
+      "metadata": {
+        "id": "fHNz6_5PwT8q",
+        "outputId": "35039c18-f1e9-4f15-84f3-f335f13a85e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "On branch update_readme\n",
+            "Changes to be committed:\n",
+            "  (use \"git reset HEAD <file>...\" to unstage)\n",
+            "\n",
+            "\t\u001b[32mmodified:   README.md\u001b[m\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git commit -m \"Обновила README.md\""
+      ],
+      "metadata": {
+        "id": "TXIlNJeAwWc6",
+        "outputId": "5299a8d9-cfdb-4608-bafa-240ea0e5fd08",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "*** Please tell me who you are.\n",
+            "\n",
+            "Run\n",
+            "\n",
+            "  git config --global user.email \"you@example.com\"\n",
+            "  git config --global user.name \"Your Name\"\n",
+            "\n",
+            "to set your account's default identity.\n",
+            "Omit --global to set the identity only in this repository.\n",
+            "\n",
+            "fatal: unable to auto-detect email address (got 'root@014ffe395220.(none)')\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git config --global user.email \"naoresh@yandex.ru\"\n",
+        "!git config --global user.name \"Nataly Oreshonok\""
+      ],
+      "metadata": {
+        "id": "0bkgWDNOwejf"
+      },
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git commit -m \"Обновила README.md\""
+      ],
+      "metadata": {
+        "id": "LzA1DNhIwnj_",
+        "outputId": "575b1a2b-6cdc-4f9b-ff32-3b6e89ed8ee3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[update_readme 23cf5ca] Обновила README.md\n",
+            " 1 file changed, 1 insertion(+)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git remote add origin-ore https://naoresh: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@github.com/naoresh/robofootball.git"
+      ],
+      "metadata": {
+        "id": "CZCXVMrQw3LN"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push origin-ore update_readme"
+      ],
+      "metadata": {
+        "id": "HajjsgffxoWl",
+        "outputId": "c4896043-050f-4cd2-c95c-35cb63f1776e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Counting objects: 3, done.\n",
+            "Delta compression using up to 2 threads.\n",
+            "Compressing objects:  33% (1/3)   \rCompressing objects:  66% (2/3)   \rCompressing objects: 100% (3/3)   \rCompressing objects: 100% (3/3), done.\n",
+            "Writing objects:  33% (1/3)   \rWriting objects:  66% (2/3)   \rWriting objects: 100% (3/3)   \rWriting objects: 100% (3/3), 350 bytes | 350.00 KiB/s, done.\n",
+            "Total 3 (delta 2), reused 0 (delta 0)\n",
+            "remote: Resolving deltas:   0% (0/2)\u001b[K\rremote: Resolving deltas:  50% (1/2)\u001b[K\rremote: Resolving deltas: 100% (2/2)\u001b[K\rremote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
+            "remote: \n",
+            "remote: Create a pull request for 'update_readme' on GitHub by visiting:\u001b[K\n",
+            "remote:      https://github.com/naoresh/robofootball/pull/new/update_readme\u001b[K\n",
+            "remote: \n",
+            "To https://github.com/naoresh/robofootball.git\n",
+            " * [new branch]      update_readme -> update_readme\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout main"
+      ],
+      "metadata": {
+        "id": "JrE9wLm5xwdt",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0edc4f3d-dde2-4721-8795-d834d9450ee5"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to branch 'main'\n",
+            "Your branch is up to date with 'origin/main'.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout -b develop"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J9k7MpzeATym",
+        "outputId": "1b14d451-88d2-4150-e176-21c1a84fe148"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to a new branch 'develop'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git push origin-ore develop"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5ueRf4ipAY9C",
+        "outputId": "2e965a0e-30f1-4217-ff89-ae8c15bd019d"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Total 0 (delta 0), reused 0 (delta 0)\n",
+            "remote: \n",
+            "remote: Create a pull request for 'develop' on GitHub by visiting:\u001b[K\n",
+            "remote:      https://github.com/naoresh/robofootball/pull/new/develop\u001b[K\n",
+            "remote: \n",
+            "To https://github.com/naoresh/robofootball.git\n",
+            " * [new branch]      develop -> develop\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!git checkout update_readme"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-HM-PSKAdw_",
+        "outputId": "dda48b31-7755-40b7-efb9-6b32ed5b560a"
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Switched to branch 'update_readme'\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "YNHLaZH2Av5_"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "colab": {
+      "name": "github_hw1.ipynb",
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.6.9"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "XR_HY96dGA4q"
-   },
-   "source": [
-    "Материалы к семинару:\n",
-    "1. [Удачная модель ветвления](https://m.habr.com/ru/post/106912/)\n",
-    "2. [Зачем нужен Git](https://guides.hexlet.io/git-guide/)\n",
-    "3. [Самые популярные ошибки и их решения](https://tproger.ru/translations/most-common-git-screwupsquestions-and-solutions/)\n",
-    "4. [Ветвление](https://git-scm.com/book/ru/v2/%D0%92%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B5-%D0%B2-Git-%D0%9E-%D0%B2%D0%B5%D1%82%D0%B2%D0%BB%D0%B5%D0%BD%D0%B8%D0%B8-%D0%B2-%D0%B4%D0%B2%D1%83%D1%85-%D1%81%D0%BB%D0%BE%D0%B2%D0%B0%D1%85)\n",
-    "5. [Инструкция по всему Git](https://git-scm.com/book/ru/v2)\n",
-    "6. [Приложение для обучения Git](https://learngitbranching.js.org/?locale=ru_RU)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "v_XJepSCGA4r"
-   },
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "colab": {
-   "name": "github_hw1.ipynb",
-   "provenance": []
-  },
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.9"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 1
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
